--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -10,33 +10,34 @@
 </head>
 
 <body>
-<header class="p-3 bg-dark text-white">
+<header class="sticky-top p-3 bg-dark text-white">
 	<div class="container">
 		<div class="d-flex flex-wrap align-items-center">
 
 			<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-				<li><a class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#add-modal">Add new</a></li>
-				<li><a class="btn btn-primary mx-2" th:href="@{/listPriority}"> Sort By Priority</a></li>
-				<li><a class="btn btn-primary mx-2" th:href="@{/list}"> Sort By Date</a></li>
+				<li><a class="btn btn-success mx-2" data-bs-toggle="modal" data-bs-target="#add-modal">Add new</a></li>
+				<li><a class="btn btn-primary mx-2" th:href="@{/listPriority}">Sort By Priority</a></li>
+				<li><a class="btn btn-primary mx-2" th:href="@{/list}">Sort By Date</a></li>
+				<li><a class="btn btn-secondary mx-2" th:href="@{/archive}">Archive</a></li>
 			</ul>
 			<div>
-				<a class="btn btn-primary mx-2" th:href="@{/archive}">Archive</a>
+				<span th:text="${#authentication.getPrincipal().getFirstName()}"></span>
+				<span th:text="${#authentication.getPrincipal().getLastName()}"></span>
 			</div>
-
 			<div class="text-end">
-				<button type="button" class="btn btn-warning mx-2">Logout</button>
+				<a type="button" class="btn btn-warning mx-2" th:href="@{/logout}">Logout</a>
 			</div>
 		</div>
 	</div>
 </header>
-<div class="container">
+<div class="container" style="margin-bottom: 30px;">
 	<div class="row">
 		<div class="col col-4" id="col-todo">
-			<h3 class="card-header">
+			<h3 class="card-header text-center">
 				TO DO
 			</h3>
 			<div class="card mb-4 text-center" th:each="item : ${items}"
-				 th:if="${item.status} == 'TODO' and ${item.user.id} == ${userId}" draggable="true" id="card-todo"
+				 th:if="${item.status} == 'TODO' and ${item.user.id} == ${#authentication.getPrincipal().getId()}" draggable="true" id="card-todo"
 				 th:href="@{/getOne/(id=${item.id})}"
 				 th:classappend="${(item.priority == 'CRITICAL' ? 'bg-warning text-black': '') +
                                 (item.priority == 'HIGH' ? 'bg-secondary text-white': '') +
@@ -60,11 +61,11 @@
 			</div>
 		</div>
 		<div class="col col-4" id="col-doing">
-			<h3 class="card-header">
+			<h3 class="card-header text-center">
 				DOING
 			</h3>
 			<div class="card mb-4 text-center" th:each="item : ${items}"
-				 th:if="${item.status} == 'DOING' and ${item.user.id} == ${userId}" draggable="true"
+				 th:if="${item.status} == 'DOING' and ${item.user.id} == ${#authentication.getPrincipal().getId()}" draggable="true"
 				 th:id="card-doing" th:href="@{/getOne/(id=${item.id})}"
 				 th:classappend="${(item.priority == 'CRITICAL' ? 'bg-warning text-black': '') +
                                 (item.priority == 'HIGH' ? 'bg-secondary text-white': '') +
@@ -88,11 +89,11 @@
 			</div>
 		</div>
 		<div class="col col-4" id="col-done">
-			<h3 class="card-header">
+			<h3 class="card-header text-center">
 				DONE
 			</h3>
 			<div class="card mb-4 text-center" th:each="item : ${items}"
-				 th:if="${item.status} == 'DONE' and ${item.user.id} == ${userId}" draggable="true" id="card-done"
+				 th:if="${item.status} == 'DONE' and ${item.user.id} == ${#authentication.getPrincipal().getId()}" draggable="true" id="card-done"
 				 th:href="@{/getOne/(id=${item.id})}"
 				 th:classappend="${(item.priority == 'CRITICAL' ? 'bg-warning text-black': '') +
                                 (item.priority == 'HIGH' ? 'bg-secondary text-white': '') +
@@ -112,33 +113,11 @@
 			</div>
 		</div>
 	</div>
-		<h5 class="d-block border border-primary col text-center" id="col-archive">Drop here to archive</h5>
 </div>
 
-
-
-<table class="table table-bordered" style="float: left;">
-	<tr>
-		<th>Name</th>
-		<th>Due Date</th>
-		<th>Priority</th>
-		<th>Status</th>
-		<th>User ID</th>
-		<th>Action</th>
-	</tr>
-	<tbody>
-
-
-	<tr th:each="item : ${items}">
-
-		<td th:text="${item.name}"></td>
-		<td th:text="${#temporals.format(item.dueDate, 'dd.MM.yyyy')}"></td>
-		<td th:text="${item.priority}"></td>
-		<td th:text="${item.status}"></td>
-		<td th:text="${item.user.id}"></td>
-	</tr>
-	</tbody>
-</table>
+<footer class="fixed-bottom bg-dark text-white">
+	<h4 class="d-block col text-center bt-2" id="col-archive">Drop here to archive</h4>
+</footer>
 
 <div class="modal fade" id="add-modal" tabindex="-1" aria-labelledby="add-modal-title" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered">
@@ -148,7 +127,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<form th:action="@{/new}" method="POST" style="max-width: 600px; margin: 0 auto;">
+				<form th:action="@{/new}" method="POST" style="max-width: 600px; margin: 0 auto;" id="add-form">
 					<div class="m-3">
 						<div class="form-group row m-3">
 							<label class="col-form-label col-4">Name</label>
@@ -172,19 +151,14 @@
 								</select>
 							</div>
 						</div>
-
 						<input type="hidden" name="status" th:value="TODO"/>
-						<input type="hidden" name="user" th:value="${userId}"/>
-
-						<div>
-							<button type="submit" class="btn btn-primary">Add new item</button>
-						</div>
+						<input type="hidden" name="user" th:value="${#authentication.getPrincipal().getId()}"/>
 					</div>
 				</form>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Save changes</button>
+				<button type="submit" class="btn btn-primary" form="add-form">Add item</button>
 			</div>
 		</div>
 	</div>
@@ -198,7 +172,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<form th:action="@{/update}" method="PUT" style="max-width: 600px; margin: 0 auto;">
+				<form th:action="@{/update}" method="PUT" style="max-width: 600px; margin: 0 auto;" id="edit-form">
 					<input type="hidden" id="idEdit" name="id" th:value="${itemId}"/>
 					<div class="m-3">
 						<div class="form-group row m-3">
@@ -232,17 +206,13 @@
 								</select>
 							</div>
 						</div>
-						<input type="hidden" id="userEdit" name="user" th:value="${userId}"/>
-						<!--TODO: Is th:value necessary-->
-						<div>
-							<button type="submit" class="btn btn-primary">Save item</button>
-						</div>
+						<input type="hidden" id="userEdit" name="user"/>
 					</div>
 				</form>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Save changes</button>
+				<button type="submit" class="btn btn-primary" form="edit-form">Save changes</button>
 			</div>
 		</div>
 	</div>
@@ -256,27 +226,26 @@
 			<div class="modal-body">
 				<h6>Are you sure you want to change the status?</h6>
 				<br>
-				<form th:action="@{/update}" method="PUT" style="max-width: 600px; margin: 0 auto;">
+				<form th:action="@{/update}" method="PUT" style="max-width: 600px; margin: 0 auto;" id="status-form">
 					<input type="hidden" id="id" name="id"/>
 					<input type="hidden" id="name" name="name"/>
 					<input type="hidden" id="dueDate" name="dueDate"/>
 					<input type="hidden" id="priority" name="priority"/>
 					<input type="hidden" id="newStatus" name="status"/>
 					<input type="hidden" id="user" name="user"/>
-					<div>
-						<button type="submit" class="btn btn-primary">YES</button>
-						<a type="button" class="btn btn-warning"
-						   href="javascript:window.location.href=window.location.href">NO</a>
-					</div>
 				</form>
 			</div>
-
+			<div class="modal-footer">
+				<a type="button" class="btn btn-secondary"
+				   href="javascript:window.location.href=window.location.href">Close</a>
+				<button type="submit" class="btn btn-primary" form="status-form">Save changes</button>
+			</div>
 		</div>
 	</div>
 </div>
 
 <div class="modal fade" id="delete-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
+	<div class="modal-dialog modal-dialog-centered">
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="exampleModalLabel">Confirm Delete</h5>
@@ -286,8 +255,8 @@
 				Are you sure you want to delete this item?
 			</div>
 			<div class="modal-footer">
-				<a href="" type="button" class="btn btn-danger" id="delRef">Delete</a>
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+				<a href="" type="button" class="btn btn-danger" id="delRef">Delete</a>
 			</div>
 		</div>
 	</div>
