--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -16,6 +16,9 @@
 				<label class="col-form-label col-4">E-mail</label>
 				<div class="col-8">
 					<input type="email" class="form-control" th:field="*{email}" required minlength="1" maxlength="45">
+					<div th:if="${registrationError}" class="alert alert-danger col-xs-offset-1 col-xs-10">
+						<span th:text="${registrationError}"></span>
+					</div>
 				</div>
 			</div>
 			<div class="form-group row m-3">
@@ -37,7 +40,8 @@
 				</div>
 			</div>
 			<div>
-				<button type="submit" class="btn btn-primary">Sign up</button>
+				<button type="submit" class="btn btn-primary mx-2">Sign up</button>
+				<a type="button" class="btn btn-secondary mx-2" href="/">Go Back</a>
 			</div>
 		</div>
 	</form>
